--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-redux": "^7.2.2",
+    "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^3.4.0",
-    "redux": "^4.0.5"
+    "redux": "^4.0.5",
+    "redux-logger": "^3.0.6"
   },
   "devDependencies": {
     "nodemon": "^1.18.5"
